--- a/5-module/3-task/index.html
+++ b/5-module/3-task/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
 <title>Бангкок Экспресс: Карусель</title>
 
 <link rel="stylesheet" href="/assets/styles/common.css" />
